objects/LAT_ClientPOP__c.object
<CustomObject>
    <fields>
        <fullName>Baixado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Baixado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Baixado__c</fullName>
        <label>Data Baixa</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered_Date__c</fullName>
        <label>Data Entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qtde Entregue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Cliente_POP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_KAMPOP__c</fullName>
        <label>Distribuição Campo</label>
        <referenceTo>LAT_KAMPOP__c</referenceTo>
        <relationshipLabel>Entregas Material POP</relationshipLabel>
        <relationshipName>Cliente_POP</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_Planned__c</fullName>
        <label>Qtde Planejado</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material_POP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material POP</label>
        <referenceTo>LAT_Produto_POP__c</referenceTo>
        <relationshipLabel>Entregas Material POP</relationshipLabel>
        <relationshipName>Entregas_Material_POP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <formula>HYPERLINK(LAT_KAMPOP__r.RegionalPOP__r.product__c, LAT_KAMPOP__r.RegionalPOP__r.product__r.Name )</formula>
        <label>Material</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Date__c</fullName>
        <label>Data Planejado</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visita__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visita</label>
        <referenceTo>Visitas__c</referenceTo>
        <relationshipLabel>Entregas Material POP</relationshipLabel>
        <relationshipName>Entregas_Material_POP</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Entrega Material POP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAT_Client__c</columns>
        <columns>Delivered__c</columns>
        <columns>Delivered_Date__c</columns>
        <columns>Material__c</columns>
        <columns>Baixado__c</columns>
        <columns>Visita__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Código Entrega</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entregas Material POP</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LAT_ValidAmount</fullName>
        <active>false</active>
        <errorConditionFormula>(LAT_Planned__c +  LAT_KAMPOP__r.Planned__c &gt; LAT_KAMPOP__r.Amount__c )</errorConditionFormula>
        <errorMessage>No dispone de esa cantidad</errorMessage>
    </validationRules>
</CustomObject>